--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -608,8 +608,8 @@
   "Force apikey auto-rotation": "Forcer la rotation auto. des secrets",
   "ApiKey": "Clé d'API",
   "Integration token": "Jeton d'intégration",
-  "Basic authentication" : "Authentification basique",
-  "Basic auth" : "Auth basique",
+  "Basic authentication": "Authentification basique",
+  "Basic auth": "Auth basique",
   "Security": "Sécurité",
   "Team with id or name already exist": "Désolé, une équipe avec ce nom existe déjà.",
   "Create team": "Créer une équipe",
@@ -1376,8 +1376,8 @@
   "semver.error.message": "Une version ne peut pas être créée avec des caractères spéciaux : %s",
   "version.creation.success.message": "La nouvelle version de l'API a été créée avec succès",
   "error.message.creation.security.enabled": "Vous n'êtes pas autorisé à créer d'API, merci de contacter votre administrateur.",
-  "anonymous.reporting.success.enabled" : "Rapports anonymes activés.",
-  "anonymous.reporting.success.disabled" : "Rapports anonymes désactivés.",
+  "anonymous.reporting.success.enabled": "Rapports anonymes activés.",
+  "anonymous.reporting.success.disabled": "Rapports anonymes désactivés.",
   "anonymous.reporting.error": "Erreur lors du changement de valeur.",
   "anonymous.reporting.popup.info": "Activer les rapports anonymes pour nous aider ? Cela nous aidera beaucoup. Pour plus d'informations, cliquez sur : ",
   "anonymous.reporting.popup.no": "Rapports anonymes non acceptés.",
@@ -1390,7 +1390,7 @@
   "aggregation.button.subscription.cancel.label": "Souscrire avec une nouvelle clé d'API",
   "aggregation.button.subscription.disable.label": "Aucune clé d'API",
   "aggregation.button.subscription.active.label": "Souscrire en étendant une clé d'API existante",
-  "documentation.not.setted.message":"Il semble qu'aucune documentation ne soit définie pour ce plan",
+  "documentation.not.setted.message": "Il semble qu'aucune documentation ne soit définie pour ce plan",
   "profile.cmscli.reset.title": "CMS CLI",
   "profile.cmscli.reset.token": "Renouveler le jeton",
   "profile.cmscli.copy.token": "Copier",
@@ -1401,7 +1401,9 @@
   "authentication.form.jwtverifier.base64.label": "Secret encodé en Base64",
   "authentication.form.jwtverifier.public.key.label": "Clé Public",
   "authentication.form.jwtverifier.private.key.label": "Clé Private",
-  "view.grid":"Vue grille",
-  "view.list":"Vue liste",
-  "tenant.logo":"Logo du tenant"
+  "view.grid": "Vue grille",
+  "view.list": "Vue liste",
+  "tenant.logo": "Logo du tenant",
+  "home.message.subscription.validation.successfull": "La souscription a bien été acceptée",
+  "home.message.subscription.refused.successfull": "La souscription a bien été refusée"
 }
