--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -457,9 +457,15 @@
     "Make it public": "Make it public",
     "Delete plan": "Delete plan",
     "Headers": "Headers",
-    "Use swagger content": "Write OpenAPI definition",
+    "swagger.specificationtype.selector.label": "Specification type",
+    "swagger.openapi.label": "OpenAPI",
+    "swagger.asyncapi.label": "AsyncAPI",
+    "swagger.use.openapi.content": "Write OpenAPI definition",
+    "swagger.use.asyncapi.content": "Write AsyncAPI definition",
     "swagger.additional.conf.label": "Configuration for API specification display",
     "swagger.additional.conf.help": "Optional value. see https://redocly.com/docs/redoc/deployment/react/#optional---pass-options",
+    "swagger.openapi.content.label": "OpenAPI content",
+    "swagger.asyncapi.content.label": "AsyncAPI content",
     "Auth. name": "Auth. name",
     "The auth. name in api swagger": "The auth. name in API swagger",
     "The apikey client id": "The API key client id",
@@ -1408,5 +1414,7 @@
     "tenant.logo":"Tenant logo",
     "home.message.subscription.validation.successfull": "The subscription has been successfully accepted",
     "home.message.subscription.refusal.successfull": "The subscription has been successfully declined",
-    "response.default.message": "Thank you for your response"
+    "response.default.message": "Thank you for your response",
+    "navbar.specification.label": "Specification",
+    "navbar.testing.label": "Testing"
 }
