FIX typo in manual

--- a/manual/docs/03-guides/14-authentication.mdx
+++ b/manual/docs/03-guides/14-authentication.mdx
@@ -226,7 +226,7 @@ Authentication in daikoku can be tricky. It's a tenant configuration, we are her
     - Click on `OAuth2` at the top of the form
     - Enable `Read profile from JWT token` 
     - Fill `Token scope` with `openid profile name email picture`
-    - Fill `Client Id` with the clietn ID provided by Auth0
+    - Fill `Client Id` with the client ID provided by Auth0
     - Fill `Client Secret` with the client secret provided by Auth0
     - Fill `Authorize URL` with `https://<your-auth0-tenant>.eu.auth0.com/authorize`
     - Fill `Token URL` with `https://<your-auth0-tenant>.eu.auth0.com/oauth/token`
