--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -940,8 +940,11 @@
   "team_apikey_for_api.show_aggregate_sub": "Voir les souscriptions associées",
   "team_apikey_for_api.hide_aggregate_sub": "Masquer les souscriptions",
   "aggregation api keys security": "Autoriser l'agrégation de clés d'APIs",
+  "aggregation api keys security for environment mode": "Autoriser l'agrégation de clés d'APIs pour le mode environnement",
   "aggregation_apikeys.security.help": "Active la possibilité d'utiliser une même clé d'API sur plusieurs plans.",
+  "aggregation_apikeys.environment.security.help" : "Active la possibilité d'utiliser une même clé d'API sur plusieurs plans ayant le même environnement.",
   "aggregation.api_key.security.notification": "L'agrégation des clés API est une utilisation avancée. Gardez à l'esprit que les métadonnées et les quotas seront partagés entre chaque clé d'API parente et ses clés d'API agrégées. Daikoku n'appliquera aucun contrôle en cas de conflit de métadonnées.",
+  "aggregation.environment.api_key.security.notification": "L'agrégation des clés API pour le mode environnement est une utilisation avancée. Gardez à l'esprit que les métadonnées et les quotas seront partagés entre la clé API parent et ses clés API agrégées ayant le même environnement. Daikoku n'appliquera aucun contrôle en cas de conflit de métadonnées.",
   "disabled.due.to.aggregation.security": "désactivé en raison de l'activation de l'aggégation des clés",
   "I understood": "J'ai compris",
   "team_apikey_for_api.make_unique": "Rendre unique",
@@ -1316,6 +1319,7 @@
   "plan.payment.setup.successful": "Les paramètres de paiement du plan ont été mis à jour avec succès",
   "api.created": "Créée",
   "api.published": "Publiée",
+  "api.not.pusblished": "API non publiée",
   "api.deprecated": "Dépréciée",
   "api.blocked": "Bloquée",
   "subscription.process.creation.title": "Création d'une étape de validation",
