WIP #710 - update front to add ability to delete subscription

--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -563,6 +563,7 @@
   "error.replace.files.content.type": "Vous ne pouvez pas remplacer un fichier par un autre de type différent",
   "Email address does not exist": "Le courriel n'existe pas",
   "login.to.tenant": "Se connecter à %s",
+  "signup.to.tenant": "Inscription à %s",
   "api.creation.title.modal": "Sélectionnez l'équipe pour laquelle créer une nouvelle API",
   "api.creation.description.modal": "Vous allez créer une nouvelle API. Pour quelle équipe voulez-vous la créer ?",
   "apigroup.creation.title.modal": "Sélectionnez l'équipe pour laquelle créer un nouveau groupe d'APIs",
@@ -948,7 +949,7 @@
   "I understood": "J'ai compris",
   "team_apikey_for_api.make_unique": "Rendre unique",
   "team_apikey_for_api.ask_for_make_unique": "Êtes-vous sûr de vouloir séparer cette clé d'API de la clé parente et d'en créer une nouvelle ?",
-  "team_apikey_for_api.ask_for_make_unique.success_messsage": "La clé d'API a correctement été séparée de la clé parent.",
+  "team_apikey_for_api.ask_for_make_unique.success_message": "La clé d'API a correctement été séparée de la clé parent.",
   "team_api_info.isDefault": "Utiliser comme dernière version",
   "request_api_access": "Vous devez être autorisé pour visualiser cette API.",
   "request_already_pending": "Un requête d'autorisation est déjà en attente pour votre équipe.",
@@ -1042,6 +1043,7 @@
   "constraints.oneof.integration.process": "Merci de sélectionner une valeur correcte pour le processus d'intégration (Automatique ou Clé d'API)",
   "constraints.required.period.unit": "L'unité de periode est requise",
   "constraint.match.path": "La valeur doit être un chemin valide",
+  "constraints.match.subscription": "La valeur ne correspond pas au nom exact de la souscription",
   "SEO": "SEO",
   "Robot.txt.label": "Contenu du fichier robots.txt",
   "Robot.txt.content": "Le contenu du fichier robots.txt servi par Daikoku",
@@ -1417,5 +1419,14 @@
   "home.message.subscription.refused.successfull": "La souscription a bien été refusée",
   "response.default.message": "Merci pour votre réponse",
   "navbar.specification.label": "Spécification",
-  "navbar.testing.label": "Test"
+  "navbar.testing.label": "Test",
+  "apikeys.delete.choice.label": "Cette souscription est le parent d'un agrégat. Pour la supprimer, vous devez choisir ce qu'il adviendra des souscriptions associées.",
+  "apikeys.delete.choice.promotion": "Choisir un enfant de la souscription qui sera promu pour remplacer la souscription supprimée.",
+  "apikeys.delete.choice.delete": "Supprimer définitivement la souscription et tous ses enfants associés.",
+  "apikeys.delete.choice.extraction": "Chaque enfant sera extrait et deviendra une souscription unique et indépendante.",
+  "apikeys.delete.child.label": "Sélectionner une souscription à promouvoir",
+  "apikeys.delete.modal.title": "Supprimer une souscription",
+  "apikeys.delete.confirm.modal.title": "Confirmer la suppression",
+  "apikeys.delete.confirm.label": "Pour confirmer la suppression, veuillez saisir le nom exact de la souscription : %s",
+  "apikeys.delete.success.message": "La souscription a été correctement supprimée"
 }
