add categories and sub section on mail internalization

--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -991,12 +991,17 @@
   "mail.api.transfer.ownership.acceptation.title": "titre du mail d'invitation au transfert de propriété d'API",
   "mailing_internalization.message_key": "Clé du message",
   "mailing_internalization.message_text": "Description du message",
+  "mailing_internalization.usage": "Usage",
   "mailing_internalization.required_variables": "Variables requises",
   "mailing_internalization.translation_updated": "Traduction sauvegardée",
   "mailing_internalization.failed_translation_update": "Une erreur est survenue lors de la mise à jour des traductions",
   "mailing_internalization.mail_tab": "Mail",
   "mailing_internalization.mail_template_tab": "Modèle de mail",
   "mailing_internalization.front_office_tab": "Autres pages",
+  "mailing_internalization.mail_description": "Gérer les contenus de tous les mails possibles dans Daikoku",
+  "mailing_internalization.mail_template_description": "Gérer le modèle englobant et utilisé sur tous les mails",
+  "mailing_internalization.front_office_description": "Gérer les traductions du Front Office de Daikoku",
+  "mailing_internalization.action": "Gérer",
   "mailing_internalization.go_to_edit_template": "Éditer le modèle de mails",
   "Translation mode enabled": "Mode traduction activé",
   "profile.security.oldPassword": "Ancien mot de passe",
