--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1429,5 +1429,7 @@
     "apikeys.delete.modal.title": "Delete a Subscription",
     "apikeys.delete.confirm.modal.title": "Confirm Deletion",
     "apikeys.delete.confirm.label": "To confirm the deletion, please enter the exact name of the subscription: %s",
-    "apikeys.delete.success.message": "The subscription has been successfully deleted"
+    "apikeys.delete.success.message": "The subscription has been successfully deleted",
+    "apikeys.view.api": "View API",
+    "apikeys.view.apikeys": "View APIkeys"
 }
