fix tranlation for Pending request

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1338,8 +1338,8 @@
     "demand.delete.modal.message": "Are you sure you want to delete this subscription demand?",
     "demand.delete.modal.title": "Deleting a subscription request",
     "subscription.process.add.email.step.title": "Email process step setup",
-    "widget.demands.title": " In progress demands",
-    "widget.demands.ext.title": "My in progress demands",
+    "widget.demands.title": "My pending requests",
+    "widget.demands.ext.title": "Pending requests",
     "widget.demands.state": "State: %s",
     "accepted": "Accepted",
     "refused": "Refused",
