--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -948,7 +948,7 @@
     "aggregation_apikeys.security.help": "Enable the possibility to use an API key on multiple APIs",
     "aggregation_apikeys.environment.security.help": "Enable the possibility to use an API key on multiple APIs having the same environment.",
     "aggregation.api_key.security.notification": "You're enabled the aggregation of API keys. It's an advanced usage of the API keys. Keep in mind that the metadata and the quotas will be shared between the parent API key and his aggregate API keys. Daikoku will not apply any control when conflict metadata.",
-    "aggregation.environment.api_key.security.notification": "You're enabled the aggregation of API keys for environment mode. It's an advanced usage of the API keys. Keep in mind that the metadata and the quotas will be shared between the parent API key and his aggregate API keys having the same environment. Daikoku will not apply any control when conflict metadata.",
+    "aggregation.environment.api_key.security.notification": "Even with aggregation security enabled, a check is performed to verify the usage plan names when extending one subscription to another. This ensures that API keys can only be aggregated within compatible environments.",
     "disabled.due.to.aggregation.security": "disabled due to enabling of aggregation security",
     "I understood": "I understood",
     "team_apikey_for_api.make_unique": "Make unique",
