--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1342,6 +1342,11 @@
     "demand.delete.modal.message": "Are you sure you want to delete this subscription demand?",
     "demand.delete.modal.title": "Deleting a subscription request",
     "subscription.process.add.email.step.title": "Email process step setup",
+    "subscription.process.email.step.title.label": "Title",
+    "subscription.process.email.step.title.defaultValue": "Daikoku subscription validation",
+    "subscription.process.email.step.emails.label": "Emails",
+    "subscription.process.email.step.messages.label": "body",
+    "subscription.process.email.step.add.label": "Add",
     "widget.demands.title": " In progress demands",
     "widget.demands.ext.title": "My in progress demands",
     "widget.demands.state": "State: %s",
