--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1341,7 +1341,12 @@
   "api.documentation.clone.page.placeholder": "Sélectionnez toutes les pages à cloner",
   "demand.delete.modal.message": "Voulez-vous vraiment supprimer cette demande de souscription ?",
   "demand.delete.modal.title": "Suppression d'une demande de souscription",
-  "subscription.process.add.email.step.title": "Configuration de l'étape du processus par e-mail",
+  "subscription.process.add.email.step.title": "Configuration de l'étape du processus par courriel",
+  "subscription.process.email.step.title.label": "Sujet",
+  "subscription.process.email.step.title.defaultValue": "Validation d'une demande de souscription dans Daikoku",
+  "subscription.process.email.step.emails.label": "Courriels",
+  "subscription.process.email.step.message.label": "Corps du courriel",
+  "subscription.process.email.step.add.label": "Ajouter",
   "widget.demands.title": "Mes demandes en cours",
   "widget.demands.ext.title": "Demandes en cours",
   "widget.demands.state": "%s",
