--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1440,5 +1440,6 @@
   "apikeys.delete.confirm.label": "Pour confirmer la suppression, veuillez saisir le nom exact de la souscription : %s",
   "apikeys.delete.success.message": "La souscription a été correctement supprimée",
   "apikeys.view.api": "Voir l'API",
-  "apikeys.view.apikeys": "Voir les clés d'API"
+  "apikeys.view.apikeys": "Voir les clés d'API",
+  "subscription.create.at": "Souscription crée le %s"
 }
