--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -608,13 +608,6 @@
     "help.apikey.grace.period": "Period during which the new client secret and the old are both active. The rotation period includes this period.",
     "constraint.apikey.grace.period": "Grace period must be inferior to rotation period",
     "reset.secret.confirm": "Are you sure you want to reset this secret?",
-    "View usage statistics": "View usage statistics",
-    "View api": "View API",
-    "Copy to clipboard": "Copy to clipboard",
-    "Setup rotation": "Setup rotation",
-    "Enable/Disable": "Enable/Disable",
-    "subscription.enable.button.label": "Enable subscription",
-    "subscription.disable.button.label": "Disable subscription",
     "Integration": "Integration",
     "Force apikey auto-rotation": "Force API key auto-rotation",
     "ApiKey": "API key",
@@ -1441,5 +1434,22 @@
     "apikeys.delete.success.message": "The subscription has been successfully deleted",
     "apikeys.view.api": "View API",
     "apikeys.view.apikeys": "View APIkeys",
-    "subscription.create.at": "Subscription created on %s"
+    "subscription.create.at": "Subscription created on %s",
+    "subscription.nota.part.1": "Check out the documentation",
+    "subscription.nota.part.2": "or explore",
+    "subscription.nota.link.api": "to using the API",
+    "subscription.nota.link.statistics": "the statistics of your subscription",
+    "subscription.custom.name.successfuly.updated": "Your custom subscription name has been successfully updated",
+    "subscription.rotation.successfully.setup": "Your secret rotation has been successfully set up",
+    "subscription.successfully.enabled": "Your subscription has been successfully enabled",
+    "subscription.successfully.disabled": "Your subscription has been successfully disabled",
+    "subscription.custom.name.update.label": "Update custom subscription name",
+    "subscription.rotation.update.label": "Setup secret rotation",
+    "subscription.reset.secret.label": "Reset secret",
+    "subscription.transfer.label": "Transfer subscription",
+    "subscription.enable.button.label": "Enable subscription",
+    "subscription.disable.button.label": "Disable subscription",
+    "subscription.delete.button.label": "Delete",
+    "subscription.enable.label": "Enabled",
+    "subscription.disable.label": "Disabled"
 }
