--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -608,13 +608,6 @@
   "help.apikey.grace.period": "Période pendant laquelle le nouveau secret et l'ancien sont tous deux actifs (cette période est inclue dans la période de rotation).",
   "constraint.apikey.grace.period": "La période de tuilage doit être inferieur à la période de rotation",
   "reset.secret.confirm": "Êtes-vous certain de vouloir réinitialiser le secret",
-  "View usage statistics": "Voir les statistiques d'usage",
-  "View api": "Voir l'API",
-  "Copy to clipboard": "Copier dans le presse-papier",
-  "Setup rotation": "Paramètrer la rotation",
-  "Enable/Disable": "Activer/Désactiver",
-  "subscription.enable.button.label": "Activer la souscription",
-  "subscription.disable.button.label": "Désactiver la souscription",
   "Integration": "Intégration",
   "Force apikey auto-rotation": "Forcer la rotation auto. des secrets",
   "ApiKey": "Clé d'API",
@@ -1441,5 +1434,22 @@
   "apikeys.delete.success.message": "La souscription a été correctement supprimée",
   "apikeys.view.api": "Voir l'API",
   "apikeys.view.apikeys": "Voir les clés d'API",
-  "subscription.create.at": "Souscription crée le %s"
+  "subscription.create.at": "Souscription crée le %s",
+  "subscription.nota.part.1": "Consultez la documentation",
+  "subscription.nota.part.2": "ou explorez",
+  "subscription.nota.link.api": "pour utiliser l'API",
+  "subscription.nota.link.statistics": "les statistiques de votre souscription",
+  "subscription.custom.name.successfuly.updated": "Le nom personnalisé de votre souscription a été mis à jour avec succès",
+  "subscription.rotation.successfully.setup": "La rotation du secret a été configurée avec succès",
+  "subscription.successfully.enabled": "Votre souscription a été activée avec succès",
+  "subscription.successfully.disabled": "Votre souscription a été désactivée avec succès",
+  "subscription.custom.name.update.label": "Mettre à jour le nom perso.",
+  "subscription.rotation.update.label": "Paramétrer la rotation",
+  "subscription.reset.secret.label": "Réinit. le secret",
+  "subscription.transfer.label": "Transférer la subscription",
+  "subscription.enable.button.label": "Activer la souscription",
+  "subscription.disable.button.label": "Désactiver la souscription",
+  "subscription.delete.button.label": "Supprimer",
+  "subscription.enable.label": "Activé",
+  "subscription.disable.label": "Désactivé"
 }
