--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1306,8 +1306,8 @@
     "authorized.groups": "Services groups",
     "authorized.services": "Services",
     "authorized.routes": "Routes",
-    "login.placeholder": "Email adress",
-    "login.label": "Email adress",
+    "login.placeholder": "Email address",
+    "login.label": "Email address",
     "password.label": "Password",
     "login.btn.label": "Login",
     "api_documentation_modal.import.title": "Choose a documentation page to import from another version of this API.",
