feat #728: add validUntil field to API key subscriptions

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1371,6 +1371,8 @@
     "motivation.form.sample.button.label": "Test",
     "sub.meta.modal.admin.custom.name.label": "Custom key name",
     "sub.meta.modal.admin.custom.name.help": "this custom name will only be visible to the admin team",
+    "sub.meta.modal.valid.until.label": "Valid until",
+    "sub.meta.modal.valid.until.help": "The date until which the subscription will be valid",
     "documentation.add.page.btn.label": "Add page",
     "DisplayMode": "Display mode",
     "display.environment.label": "Environment",
@@ -1394,6 +1396,7 @@
     "aggregated.apikey.badge.apikey.name": "API key custom name",
     "apisubscription.lastUsage.label": "Last usage",
     "N/A": "N/A",
+    "validationDate.apikey.badge.title": "Valid Until",
     "semver.error.message": "Can't create a version with special characters : %s",
     "version.creation.success.message": "New version of API created successfully",
     "error.message.creation.security.enabled": "You're not authorized to create an API, please contact your administrator.",
