--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1371,6 +1371,8 @@
   "motivation.form.sample.button.label": "Tester",
   "sub.meta.modal.admin.custom.name.label": "Nom personnalisé de la clé",
   "sub.meta.modal.admin.custom.name.help": "ce nom personnalisé ne sera visible que de l'équipe d'administration",
+  "sub.meta.modal.valid.until.label": "Valide jusqu'à",
+  "sub.meta.modal.valid.until.help": "La date de fin de validité de la clé",
   "documentation.add.page.btn.label": "Ajouter une page",
   "DisplayMode": "Affichage",
   "display.environment.label": "Environnement",
@@ -1394,6 +1396,7 @@
   "aggregated.apikey.badge.apikey.name": "Nom personnalisée de la clé",
   "apisubscription.lastUsage.label": "Dernier usage",
   "N/A": "N/A",
+  "validationDate.apikey.badge.title": "Date de validation",
   "semver.error.message": "Une version ne peut pas être créée avec des caractères spéciaux : %s",
   "version.creation.success.message": "La nouvelle version de l'API a été créée avec succès",
   "error.message.creation.security.enabled": "Vous n'êtes pas autorisé à créer d'API, merci de contacter votre administrateur.",
