Rename the labels for the placeholder on filters

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -35,7 +35,7 @@
     "filter.preview.tag": "tagged",
     "filter.preview.team": "produced by",
     "clear filter": "clear filter",
-    "Search your API...": "Search your API...",
+    "Search your API...": "Search your API",
     "Previous": "Previous",
     "Next": "Next",
     "All": "All",
@@ -1276,9 +1276,9 @@
     "select.team.placeholder": "Select a team",
     "otoroshi.missing.entities": "Missing Otoroshi entities",
     "otoroshi.missing.target": "Missing Otoroshi target",
-    "apiList.tag.search": "Search a tag",
-    "apiList.category.search": "Search a category",
-    "apiList.team.search": "Search a team",
+    "apiList.tag.search": "By tag",
+    "apiList.category.search": "By category",
+    "apiList.team.search": "By team",
     "team.email.verification.send": "Mail sent to %s for verify this email address.",
     "team.email.alreadyVerified": "This mail is already verified",
     "team.email.notVerified": "Send a mail",
