--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1276,9 +1276,9 @@
   "select.team.placeholder": "Sélectionner une équipe",
   "otoroshi.missing.entities": "Entités Otoroshi manquantes",
   "otoroshi.missing.target": "Cible Otoroshi manquante",
-  "apiList.tag.search": "Recherchez un tag",
-  "apiList.category.search": "Recherchez une catégorie",
-  "apiList.team.search": "Recherchez une équipe",
+  "apiList.tag.search": "Par tag",
+  "apiList.category.search": "Par catégorie",
+  "apiList.team.search": "Par équipe",
   "team.email.verification.send": "Mail envoyé à %s pour vérifier cette adresse email.",
   "team.email.alreadyVerified": "Cet email est déjà vérifié",
   "team.email.notVerified": "Envoyer un mail",
