--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1440,5 +1440,7 @@
     "apikeys.delete.confirm.label": "To confirm the deletion, please enter the exact name of the subscription: %s",
     "apikeys.delete.success.message": "The subscription has been successfully deleted",
     "apikeys.view.api": "View API",
-    "apikeys.view.apikeys": "View APIkeys"
+    "apikeys.view.apikeys": "View APIkeys",
+    "Daikoku.home" : "Daikoku home",
+    "API.list" : "APIs list"
 }
