improve labels and margins

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1428,8 +1428,8 @@
     "apikeys.delete.choice.delete": "Permanently delete the subscription and all its associated children.",
     "apikeys.delete.choice.extraction": "Each child will be extracted and become a unique and independent subscription.",
     "apikeys.delete.child.label": "Select a subscription to promote",
-    "apikeys.delete.modal.title": "Delete a Subscription",
-    "apikeys.delete.confirm.modal.title": "Confirm Deletion",
+    "apikeys.delete.modal.title": "Delete a subscription",
+    "apikeys.delete.confirm.modal.title": "Confirm the deletion",
     "apikeys.delete.confirm.label": "To confirm the deletion, please enter the exact name of the subscription: %s",
     "apikeys.delete.success.message": "The subscription has been successfully deleted",
     "apikeys.view.api": "View API",
@@ -1444,6 +1444,8 @@
     "subscription.successfully.enabled": "Your subscription has been successfully enabled",
     "subscription.successfully.disabled": "Your subscription has been successfully disabled",
     "subscription.custom.name.update.label": "Update custom subscription name",
+    "subscription.custom.name.update.message":"Subscription name",
+    "subscription.custom.name.update.placeholder":"Custom name",
     "subscription.rotation.update.label": "Setup secret rotation",
     "subscription.reset.secret.label": "Reset secret",
     "subscription.transfer.label": "Transfer subscription",
