--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -607,7 +607,7 @@
   "help.apikey.rotation.period": "Période après laquelle le secret sera automatiquement modifié",
   "help.apikey.grace.period": "Période pendant laquelle le nouveau secret et l'ancien sont tous deux actifs (cette période est inclue dans la période de rotation).",
   "constraint.apikey.grace.period": "La période de tuilage doit être inferieur à la période de rotation",
-  "reset.secret.confirm": "Êtes-vous certain de vouloir réinitialiser le secret",
+  "reset.secret.confirm": "Êtes-vous certain de vouloir réinitialiser le secret ?",
   "Integration": "Intégration",
   "Force apikey auto-rotation": "Forcer la rotation auto. des secrets",
   "ApiKey": "Clé d'API",
@@ -1444,9 +1444,11 @@
   "subscription.successfully.enabled": "Votre souscription a été activée avec succès",
   "subscription.successfully.disabled": "Votre souscription a été désactivée avec succès",
   "subscription.custom.name.update.label": "Mettre à jour le nom perso.",
+  "subscription.custom.name.update.message":"Nom de la souscription",
+  "subscription.custom.name.update.placeholder":"Nom personnalisé",
   "subscription.rotation.update.label": "Paramétrer la rotation",
   "subscription.reset.secret.label": "Réinit. le secret",
-  "subscription.transfer.label": "Transférer la subscription",
+  "subscription.transfer.label": "Transférer la souscription",
   "subscription.enable.button.label": "Activer la souscription",
   "subscription.disable.button.label": "Désactiver la souscription",
   "subscription.delete.button.label": "Supprimer",
